unpackaged/main/default/objects/Charges__c/Charges__c.object-meta.xml
<CustomObject>
    <label>Charges</label>
    <nameField>
        <displayFormat>Charge-{00000}</displayFormat>
        <label>Charges#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>