unpackaged/main/default/objects/Charges__c/fields/Completed_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Completed_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Transaction</label>
    <type>Checkbox</type>
</CustomField>