unpackaged/main/default/objects/Charges__c/fields/Justification_for_Charges_Request__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_Charges_Request__c</fullName>
    <label>Justification for Charges Request</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>