unpackaged/main/default/objects/Charges__c/fields/Last_4_of_Token__c.field-meta.xml
<CustomField>
    <fullName>Last_4_of_Token__c</fullName>
    <label>Last 4 of Token #</label>
    <length>4</length>
    <type>Text</type>
</CustomField>