unpackaged/main/default/objects/Charges__c/fields/Sales_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Sales_Receipt__c</fullName>
    <label>Sales Receipt #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>