unpackaged/main/default/objects/Charges__c/fields/Total_Charges_Currency__c.field-meta.xml
<CustomField>
    <fullName>Total_Charges_Currency__c</fullName>
    <formula>CSI_ICS__r.Charges_Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Charges Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>