unpackaged/main/default/objects/Charges__c/validationRules/ICS_Last4OfCCNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>ICS_Last4OfCCNumber</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(isblank(Last_4_of_CC__c)),NOT(ISNUMBER(  Last_4_of_CC__c  )))</errorConditionFormula>
    <errorDisplayField>Last_4_of_CC__c</errorDisplayField>
    <errorMessage>Please verify the CC #</errorMessage>
</ValidationRule>