unpackaged/main/default/objects/Charges__c/validationRules/ICS_Last4OfTokenNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>ICS_Last4OfTokenNumber</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNUMBER(  Last_4_of_Token__c  ))</errorConditionFormula>
    <errorDisplayField>Last_4_of_Token__c</errorDisplayField>
    <errorMessage>Please Verify the Token Number</errorMessage>
</ValidationRule>